fix: adjust quiz items so that they wrap separately from the radio button

--- a/src/css/overrides/_quizzes.scss
+++ b/src/css/overrides/_quizzes.scss
@@ -54,6 +54,16 @@
     &.wpProQuiz_answerCorrect {
         background: rgba(map-get($intent, 'success'), 0.15);
     }
+    $margin: 20px;
+
+    position: relative;
+    margin-left: $margin;
+
+    .wpProQuiz_questionInput {
+        position: absolute;
+        top: 10px;
+        left: -$margin;
+    }
 }
 
 .wpProQuiz_answerMessage,
